src/test/ui/feature-gates/feature-gate-prelude_import.stderr
error[E0658]: `#[prelude_import]` is for use by rustc only
  --> $DIR/feature-gate-prelude_import.rs:1:1
   |
LL | #[prelude_import]
   | ^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(prelude_import)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
